LP base 50% feito

--- a/resources/assets/styles/components/_faq.sass
+++ b/resources/assets/styles/components/_faq.sass
@@ -14,7 +14,7 @@
             margin: 1rem 0
 
 .btn-collapse 
-  background-color: #c4c
+  background-color: #001b64ed
   border: none
   border-radius: 5px
   color: #fff
@@ -29,7 +29,7 @@
   font-weight: bold
   transition: background-color 0.3s ease
   &.open 
-    background-color: #000
+    background-color: #001b64
     border-radius: 0.4rem 0.4rem 0 0
   &::after 
     content: '\002B'
@@ -39,15 +39,13 @@
   &.open::after 
     content: '\2212'
   &:hover 
-    background-color: #000
+    background-color: #001b64
 
 .content-collapse 
   display: none
   padding: 10px
-  background-color: #c4c4
+  background-color: #001b6432
   border-radius: 0 0 0.4rem 0.4rem
-  border: 0  1px 1px 1px solid #c4c4c4
-  color: #fff
+  border: 0  1px 1px 1px solid #c4c4c4 !important
   &.open 
     display: block
-
