--- a/resources/assets/styles/components/_header.sass
+++ b/resources/assets/styles/components/_header.sass
@@ -7,7 +7,7 @@ header
   position: fixed
   background: #fff
   width: 100vw
-  background: #000
+  background: #fff
   nav
     display: flex
     justify-content: space-between
