--- a/resources/assets/styles/main.sass
+++ b/resources/assets/styles/main.sass
@@ -9,3 +9,4 @@
 @import './components/_depoimentos'
 @import './components/_faq'
 @import './components/_whatsapp-fixed'
+@import './components/_form'
