--- a/resources/assets/styles/main.css
+++ b/resources/assets/styles/main.css
@@ -62,7 +62,7 @@ header {
   position: fixed;
   background: #fff;
   width: 100vw;
-  background: #000;
+  background: #fff;
 }
 header nav {
   display: flex;
@@ -189,6 +189,10 @@ header nav ul {
   margin: 1rem 0;
 }
 
+.checked {
+  color: orange;
+}
+
 .s-faq {
   margin: 3rem 0;
 }
@@ -201,7 +205,7 @@ header nav ul {
 }
 
 .btn-collapse {
-  background-color: #c4c;
+  background-color: rgba(0, 27, 100, 0.9294117647);
   border: none;
   border-radius: 5px;
   color: #fff;
@@ -217,7 +221,7 @@ header nav ul {
   transition: background-color 0.3s ease;
 }
 .btn-collapse.open {
-  background-color: #000;
+  background-color: #001b64;
   border-radius: 0.4rem 0.4rem 0 0;
 }
 .btn-collapse::after {
@@ -230,16 +234,15 @@ header nav ul {
   content: "−";
 }
 .btn-collapse:hover {
-  background-color: #000;
+  background-color: #001b64;
 }
 
 .content-collapse {
   display: none;
   padding: 10px;
-  background-color: rgba(204, 68, 204, 0.2666666667);
+  background-color: rgba(0, 27, 100, 0.1960784314);
   border-radius: 0 0 0.4rem 0.4rem;
-  border: 0 1px 1px 1px solid #c4c4c4;
-  color: #fff;
+  border: 0 1px 1px 1px solid #c4c4c4 !important;
 }
 .content-collapse.open {
   display: block;
@@ -269,4 +272,82 @@ header nav ul {
 .s-whatsAppButton .whatsapp-link .whatsapp-icon {
   font-size: 4rem;
   margin-top: 2px;
+}
+
+.s-form {
+  margin: 3rem 0;
+}
+.s-form .container h2 {
+  margin: 2rem 0;
+  text-align: center;
+}
+.s-form .container .form-info {
+  display: flex;
+  gap: 6rem;
+  justify-content: center;
+  align-items: center;
+}
+.s-form .container .form-info .form-content {
+  border: 1px solid red;
+  width: 70%;
+  padding: 2rem;
+}
+.s-form .container .form-info .form-content h3 {
+  text-align: center;
+  margin: 1rem 0;
+  color: #001b64;
+}
+.s-form .container .form-info .form-content a .whatsForm {
+  text-align: center;
+  gap: 2rem;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  background: #25D366;
+  padding: 1rem;
+  color: #fff;
+  border-radius: 5px;
+}
+.s-form .container .form-info .form-content a .whatsForm:hover {
+  transform: scale(1.01);
+  box-shadow: 0px 0px 15px #25D366;
+  transition: all 0.3s;
+}
+.s-form .container .form-info .form-content label {
+  font-weight: bold;
+  color: #001b64;
+}
+.s-form .container .form-info .form-content input {
+  padding: 1rem;
+  border-radius: 20px;
+  width: 100%;
+  border: 1px solid #c4c4c4;
+  margin: 1rem 0;
+}
+.s-form .container .form-info .form-content input[type=submit] {
+  background-color: rgba(0, 27, 100, 0.9294117647);
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  padding: 1rem 2rem;
+  width: 100%;
+  cursor: pointer;
+}
+.s-form .container .form-info .form-content input[type=submit]:hover {
+  background-color: #001b64;
+  transition: all 0.2s;
+  transform: scale(1.003);
+}
+.s-form .container .form-info .form-content textarea {
+  width: 100%;
+  margin: 1rem 0;
+}
+.s-form .container .form-info .endereco-loja {
+  width: 30%;
+}
+.s-form .container .form-info .endereco-loja .adress-itens {
+  margin: 3rem 0;
+}
+.s-form .container .form-info .endereco-loja .adress-itens img {
+  margin: 0 auto;
 }/*# sourceMappingURL=main.css.map */
