--- a/resources/assets/styles/components/_reset.sass
+++ b/resources/assets/styles/components/_reset.sass
@@ -16,6 +16,20 @@ body
   -webkit-font-smoothing: antialiased
   width: 100%
   font-family: 'Poppins'
+  background-image: url("/resources/assets/img/floral-simples.jpg")
+  background-position: center
+  background-repeat: no-repeat
+  background-size: cover
+  background-attachment: fixed
+  &::before
+    content: ""
+    position: fixed
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    background-color: rgba(255, 255, 255, 0.6)
+    z-index: -1
 
 img
   max-width: 100%
@@ -41,5 +55,5 @@ li
   list-style: none
 
 .container
-  width: 90%
+  width: 70%
   margin: 0 auto
