--- a/resources/assets/styles/main.sass
+++ b/resources/assets/styles/main.sass
@@ -1,12 +1,7 @@
 @import './components/_pattern'
-@import './components/_responsive'
 @import './components/_reset'
+@import './components/_responsive'
 @import './components/_header'
-@import './components/_banner'
-@import './components/_release'
-@import './components/_history'
-@import './components/_galery'
-@import './components/_depoimentos'
-@import './components/_faq'
-@import './components/_whatsapp-fixed'
-@import './components/_form'
+@import './components/_banner-home'
+@import './components/_sobre'
+@import './components/_galeria'
