base LP design desktop

--- a/resources/assets/styles/components/_galeria.sass
+++ b/resources/assets/styles/components/_galeria.sass
@@ -5,5 +5,36 @@
 .s-galeria
   .container
     .content-galeria
+      .link-galeria
+        display: flex
+        justify-content: center
+        align-items: center
+        margin-top: 4rem
+        a
+          padding: 1rem 2rem
+          border: 2px solid #ddc0a6
+          border-radius: 100px
+          color: #ddc0a6
       strong
         color: #ddc0a6
+      .box-galeria
+        column-count: 4
+        column-gap: 2rem
+        img
+          width: 100%
+          border-radius: 4px
+          margin-bottom: 1rem
+
+  
+.divisoria-sections
+  display: flex
+  justify-content: center
+  align-items: center
+  margin-top: -4rem
+  margin-bottom: 2rem
+
+.divisoria-sections2
+  display: flex
+  justify-content: center
+  align-items: center
+  margin: 3rem 0
