--- a/resources/assets/styles/components/_header.sass
+++ b/resources/assets/styles/components/_header.sass
@@ -7,6 +7,8 @@ header
     .social-nav
       background-color: #ddc0a6
       .container
+        .logo-nav-img
+          display: flex
         .social-nav-itens
           padding: 1rem 0
           display: flex
@@ -24,3 +26,4 @@ header
             li
               a
                 color: #001b64
+              
