--- a/resources/assets/styles/main.sass
+++ b/resources/assets/styles/main.sass
@@ -5,3 +5,8 @@
 @import './components/_banner-home'
 @import './components/_sobre'
 @import './components/_galeria'
+@import './components/_servicos'
+@import './components/_depoimentos'
+@import './components/_contato'
+@import './components/_insta-feed'
+@import './components/_footer'
