ajustes solicitados base

--- a/resources/assets/styles/components/_banner-home.sass
+++ b/resources/assets/styles/components/_banner-home.sass
@@ -3,6 +3,8 @@
 @import './_responsive'
 
 .s-banner-home
+  margin-top: -4rem
+  margin-bottom: 8rem
   .container
     .content-banner-home
       display: flex
