--- a/resources/assets/styles/components/_sobre.sass
+++ b/resources/assets/styles/components/_sobre.sass
@@ -3,9 +3,11 @@
 @import './_responsive'
 
 .s-sobre
-  margin-top: 13rem
+  margin-top: 3rem
   .container
     .content-sobre
+      display: flex
+      flex-direction: column-reverse
       .box-sobre
         display: flex
         gap: 4rem
