--- a/resources/assets/styles/components/_reset.sass
+++ b/resources/assets/styles/components/_reset.sass
@@ -16,11 +16,11 @@ body
   -webkit-font-smoothing: antialiased
   width: 100%
   font-family: 'Poppins'
-  background-image: url("/resources/assets/img/floral-simples.jpg")
-  background-position: center
-  background-repeat: no-repeat
-  background-size: cover
-  background-attachment: fixed
+  // background-image: url("/resources/assets/img/floral-simples.jpg")
+  // background-position: center
+  // background-repeat: no-repeat
+  // background-size: cover
+  // background-attachment: fixed
   &::before
     content: ""
     position: fixed
