ajustes base LP

--- a/resources/assets/styles/components/_footer.sass
+++ b/resources/assets/styles/components/_footer.sass
@@ -5,8 +5,35 @@
 .s-footer
   background: #ddc0a6
   padding: 4rem 0
+  color: #fff
   .container
     .content-footer
+      display: flex
+      justify-content: space-between
+      gap: 6rem
+      white-space: nowrap
       .box-left-footer
+        strong
+          color: #fff
         .icons-social-footer
+          margin-top: 1rem
+          a
+            color: #fff
+            i
+              font-size: 3rem
+              margin: 0.5rem
       .box-right-footer
+        display: flex
+        .itens-footer-right
+          display: flex
+          flex-direction: column
+          margin: 0 2rem
+          strong
+            margin-bottom: 1rem
+          a
+            color: #fff
+          span
+            i
+              margin-right: 0.8rem
+            a
+              padding: 2rem 0
