--- a/resources/assets/styles/components/_reset.sass
+++ b/resources/assets/styles/components/_reset.sass
@@ -41,7 +41,7 @@ button
   cursor: pointer
 p
   font-weight: 400
-  font-size: 1.8rem
+  font-size: 1.6rem
   line-height: 2.4rem
   // letter-spacing: 1.5px
 input
@@ -50,10 +50,14 @@ input
 
 a
   text-decoration: none
+  font-size: 1.6rem
 
 li
   list-style: none
 
+span
+  font-size: 1.6rem
+  
 .container
   width: 70%
   margin: 0 auto
