--- a/resources/assets/styles/main.css
+++ b/resources/assets/styles/main.css
@@ -65,6 +65,10 @@ span {
   font-size: 1.6rem;
 }
 
+h2 {
+  color: #001b64;
+}
+
 .container {
   width: 70%;
   margin: 0 auto;
@@ -135,6 +139,10 @@ li {
 
 span {
   font-size: 1.6rem;
+}
+
+h2 {
+  color: #001b64;
 }
 
 .container {
@@ -248,6 +256,10 @@ span {
   font-size: 1.6rem;
 }
 
+h2 {
+  color: #001b64;
+}
+
 .container {
   width: 70%;
   margin: 0 auto;
@@ -351,6 +363,10 @@ li {
 
 span {
   font-size: 1.6rem;
+}
+
+h2 {
+  color: #001b64;
 }
 
 .container {
@@ -501,6 +517,10 @@ span {
   font-size: 1.6rem;
 }
 
+h2 {
+  color: #001b64;
+}
+
 .container {
   width: 70%;
   margin: 0 auto;
@@ -615,6 +635,10 @@ span {
   font-size: 1.6rem;
 }
 
+h2 {
+  color: #001b64;
+}
+
 .container {
   width: 70%;
   margin: 0 auto;
@@ -724,6 +748,10 @@ span {
   font-size: 1.6rem;
 }
 
+h2 {
+  color: #001b64;
+}
+
 .container {
   width: 70%;
   margin: 0 auto;
@@ -830,6 +858,10 @@ li {
 
 span {
   font-size: 1.6rem;
+}
+
+h2 {
+  color: #001b64;
 }
 
 .container {
@@ -967,6 +999,10 @@ span {
   font-size: 1.6rem;
 }
 
+h2 {
+  color: #001b64;
+}
+
 .container {
   width: 70%;
   margin: 0 auto;
@@ -1037,6 +1073,10 @@ li {
 
 span {
   font-size: 1.6rem;
+}
+
+h2 {
+  color: #001b64;
 }
 
 .container {
